--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install build and test dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint pytest pytest-asyncio wheel
+        pip install pylint pytest pytest-asyncio pytest-timeout wheel
     - name: Build and install yarals and its dependencies
       run: |
         pip wheel .
@@ -40,7 +40,7 @@ jobs:
         pylint --rcfile=.pylintrc --disable=protected-access,import-error $(ls -R ./tests/test_*.py) | tee pylint-tests.txt
     - name: Run tests
       run: |
-        pytest -vv --color=yes | tee pytest-results.txt
+        pytest -vv --color=yes --timeout 10 | tee pytest-results.txt
     - name: Upload pylint results
       uses: actions/upload-artifact@v2
       with:
