--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
   push:
     paths-ignore:
       - 'docs/'
+      - 'README.md'
+      - '.pylintrc'
+      - '.gitignore'
   pull_request:
     branches: [ main ]
 
