fixed fail condition

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Upload pytest results
       uses: actions/upload-artifact@v2
       # don't really care if every test passes
-      if: fail()
+      if: ${{ failure() }}
       with:
         name: pytest-results-${{ matrix.os }}-${{ matrix.python-version }}.txt
         path: pytest-results.txt
