--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,12 +27,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install build and test dependencies
+    - name: Install yara-language-server and its dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pylint pytest pytest-asyncio pytest-timeout wheel
-    - name: Build and install yarals and its dependencies
-      run: |
         pip wheel .
         pip install $(ls *.whl)
         pip install -r requirements.txt
