--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ name: release
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - '[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   package:
@@ -32,12 +32,12 @@ jobs:
     - name: Get wheel name
       id: wheel
       run: |
-        echo "WHEEL=$(find . -type f -name 'yara_language_server*.whl' -printf '%f\n')" >> $GITHUB_ENV
+        echo "::set-output name=wheel::$(find . -type f -name 'yara_language_server*.whl' -printf '%f\n')"
     - name: Upload package as an artifact
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ env.WHEEL }}
-        path: ${{ env.WHEEL }}
+        name: ${{ steps.wheel.outputs.version }}
+        path: ${{ steps.wheel.outputs.version }}
         if-no-files-found: error
   release:
     needs: package
@@ -54,7 +54,7 @@ jobs:
       id: prerelease
       # if the package version still has a major version of 0, consider this a prerelease
       run: |
-        [ ${{ needs.package.outputs.version }} < "1.0.0" ] \
+        [[ "${{ needs.package.outputs.version }}" < "1.0.0" ]] \
         && echo "PRE=true" >> $GITHUB_ENV \
         || echo "PRE=false" >> $GITHUB_ENV
     - name: Create release
