--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ on:
       - 'README.md'
       - '.pylintrc'
       - '.gitignore'
+      - '.github/workflows/publish.yml'
+      - '.github/workflows/release.yml'
   pull_request:
     branches: [ main ]
 
