--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,6 @@ jobs:
   release:
     needs: package
     runs-on: ubuntu-latest
-    outputs:
-      release_url: ${{ steps.create-release.outputs.upload_url }}
     steps:
     - name: Download wheel
       id: download-wheel
@@ -73,6 +71,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create-release.outputs.upload_url }}
-        asset_path: ${{ needs.package.outputs.wheel }}
+        asset_path: ${{ steps.download-wheel.outputs.download-path }}
         asset_name: ${{ needs.package.outputs.wheel }}
         asset_content_type: application/zip
