--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,6 +71,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create-release.outputs.upload_url }}
-        asset_path: ${{ steps.download-wheel.outputs.download-path }}
+        asset_path: ${{ steps.download-wheel.outputs.download-path }}/${{ needs.package.outputs.wheel }}
         asset_name: ${{ needs.package.outputs.wheel }}
         asset_content_type: application/zip
