--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         pip wheel .
         pip install $(ls *.whl)
         pip install -r requirements.txt
-        echo "YARALS_VERSION=$(pip show yarals | grep Version | cut -d ' ' -f2)" >> $GITHUB_ENV
+        echo "YARALS_VERSION=$(pip show yara-language-server | grep Version | cut -d ' ' -f2)" >> $GITHUB_ENV
     - name: Lint Package
       run: |
         pylint --rcfile=.pylintrc --exit-zero ./yarals | tee pylint-pkg.txt
