--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,10 @@ jobs:
         pip install $(ls *.whl)
         pip install -r requirements.txt
         echo "::set-output name=version::$(pip show yara-language-server | grep Version | cut -d ' ' -f2)"
+    - name: Ensure package version matches tag
+      id: tag-check
+      if: ${{ github.ref != "refs/tags/${{ steps.build.outputs.version }}" }}
+      run: exit 1
     - name: Get wheel name
       id: wheel
       run: |
