moved conditional down to run

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,8 +31,8 @@ jobs:
         echo "::set-output name=version::$(pip show yara-language-server | grep Version | cut -d ' ' -f2)"
     - name: Ensure package version matches tag
       id: tag-check
-      if: ${{ $(echo github.ref | sed s@refs/tags/@@) != steps.build.outputs.version }}
-      run: exit 1
+      run: |
+        [[ ${{ github.ref }} != "refs/tags/${{ steps.build.outputs.version }}" ]] && exit 1
     - name: Get wheel name
       id: wheel
       run: |
