--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,9 +5,7 @@ name: Upload Python Package
 
 on:
   release:
-    types:
-    - released
-    - prereleased
+    types: [published]
 
 jobs:
   publish:
